--- a/source/VotingApp/VotingApp/Views/Admin/ViewAll.cshtml
+++ b/source/VotingApp/VotingApp/Views/Admin/ViewAll.cshtml
@@ -14,15 +14,15 @@
                 @if (vote.UserId != null)
                 {
                     <h3>Vote Id:@vote.Id</h3>
-                    <h3>Vote Title:@vote.VoteTitle</h3>
-                    <h3>Vote Type:@vote.VoteType.VotingType</h3>
+                    <h3>Poll Title:@vote.VoteTitle</h3>
+                    <h3>Poll Type:@vote.VoteType.VotingType</h3>
                     <h3>UserId:@vote.UserId</h3>
                 }
                 else
                 {
                     <h3>Vote Id:@vote.Id</h3>
-                    <h3>Vote Title:@vote.VoteTitle</h3>
-                    <h3>Vote Type:@vote.VoteType.VotingType</h3>
+                    <h3>Poll Title:@vote.VoteTitle</h3>
+                    <h3>Poll Type:@vote.VoteType.VotingType</h3>
                 }
             </div>
             <div class="card-body">
