--- a/source/VotingApp/VotingApp/Views/Create/MultipleChoice.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/MultipleChoice.cshtml
@@ -16,7 +16,7 @@
 	                                                     width: 100vw;">
 
 	<div class="text-center text-white">
-		<h1 class="display-4">Multiple Choice Vote</h1>
+		<h1 class="display-4">Multiple Choice Poll</h1>
 		<hr class="mb-4"/>
 		<h3>Please enter voting options below: </h3>
 	</div>
