--- a/source/VotingApp/VotingApp/Views/Help/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Help/Index.cshtml
@@ -10,7 +10,7 @@
 		                                                     width: 100vw;">
 		<div class="container text-white">
 			<h1 class="display-4 pt-5">Help Page</h1>
-			<p class="lead">Here are some examples of the voting types we provide</p>
+			<p class="lead">Here are some examples of the poll types we provide</p>
 			<hr class="mt-lg-5" style="border-top: 3px solid white; color: white; background-color: white;">
 		</div>
 	</div>
@@ -21,9 +21,9 @@
 		<div class="col mt-3 mb-5">
 			<div class="card">
 				<div class="card-body">
-					<h5 class="card-title"><u>Yes/No Vote</u></h5>
+					<h5 class="card-title"><u>Yes/No Poll</u></h5>
 					<p class="card-text">
-						Let's say I want to create a simple yes/no vote to ask my friends if they want to go to the movies on Friday or not. To first start I will go to the create a vote page
+						Let's say I want to create a simple yes/no poll to ask my friends if they want to go to the movies on Friday or not. To first start I will go to the create a poll page
 						and fill everything out: 
 						<ol>
 							<li>First I will pick a title (This can be something simple and short to give an idea what this is about), so I enter "Movies with friends" for my title.</li>
@@ -33,19 +33,19 @@
 							<li>Then I will choose if I would like it to be anonymous. For this I want to know who answers what so that I know who is 
 								coming to the movie and who can't. So I don't check the anonymous box because then I won't be able to see who said no. </li>
 							<li>I'll then hit the "Review" button so I am able to make sure everything I picked looks good. If I need to make changes on anything I'll hit the "Edit" button which will bring me back to the previous screen to make changes.</li>
-							<li>I will now see the voting options that my users will pick from (since it's a yes/no vote I should just see yes and no as the options).If everything looks good and I am ready to send out my vote I'll hit the submit button.</li>
+							<li>I will now see the voting options that my users will pick from (since it's a yes/no poll I should just see yes and no as the options).If everything looks good and I am ready to send out my vote I'll hit the submit button.</li>
 						</ol>
 					</p>
-					<a asp-area="" asp-controller="Create" asp-action="Index"><button type="button" class="btn btn-primary">Create A Vote</button></a>
+					<a asp-area="" asp-controller="Create" asp-action="Index"><button type="button" class="btn btn-primary">Create A Poll</button></a>
 				</div>
 			</div>
 		</div>
 		<div class="col mt-3 mb-5">
 			<div class="card">
 				<div class="card-body">
-					<h5 class="card-title"><u>Multiple Selection Vote</u></h5>
+					<h5 class="card-title"><u>Multiple Selection Poll</u></h5>
 					<p class="card-text">
-						Let's say I want to create a multiple selection vote so that I can enter (up to 10) options for a staff meeting that I want my staff to vote on. To first start I will go to the create a vote page
+						Let's say I want to create a multiple selection poll so that I can enter (up to 10) options for a staff meeting that I want my staff to vote on. To first start I will go to the create a poll page
 						and fill everything out: 
 						<ol>
 							<li>First I will pick a title (This can be something simple and short to give an idea what this is about), so I enter "What goal we want to strive for next" for my title.</li>
@@ -54,12 +54,12 @@
 							<li>Next I will want to choose the multiple selection voting option.</li>
 							<li>Then I choose if I would like it to be anonymous. For this I told my staff it would be anonymous so I will check the anonymous button. This way I can still see the results, but not how individuals voted. </li>
 							<li>After hitting the "Review" button I will be taken to another page to enter my options for the voters.</li>
-							<li>Once on this page I enter the goals that I want my staff to choose from. If I mess up on any options I am able to hit the delete button next to the option I wish to delete. The edit button will bring me back to the create a vote page if I discovered I would like to change my vote type, title, description, or the anonymous field. Then I hit the "Review" button once I'm finished entering options</li>
+							<li>Once on this page I enter the goals that I want my staff to choose from. If I mess up on any options I am able to hit the delete button next to the option I wish to delete. The edit button will bring me back to the create a poll page if I discovered I would like to change my poll type, title, description, or the anonymous field. Then I hit the "Review" button once I'm finished entering options</li>
 							<li>I'm then brought to the confirmation page so I am able to make sure everything I entered looks good. If I need to make changes on anything I'll hit the "Edit" button which will bring me back to the previous screens to make changes.</li>
-							<li>I can now see the voting options that my users will pick from (since it's a multiple selection vote I will see everything I put down as options).If everything looks good and I am ready to send out my vote I'll hit the submit button.</li>
+							<li>I can now see the voting options that my users will pick from (since it's a multiple selection poll I will see everything I put down as options).If everything looks good and I am ready to send out my vote I'll hit the submit button.</li>
 						</ol>
 					</p>
-					<a asp-area="" asp-controller="Create" asp-action="Index"><button type="button" class="btn btn-primary">Create A Vote</button></a>
+					<a asp-area="" asp-controller="Create" asp-action="Index"><button type="button" class="btn btn-primary">Create A Poll</button></a>
 				</div>
 			</div>
 		</div>
