--- a/source/VotingApp/VotingApp/Views/Home/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Home/Index.cshtml
@@ -14,15 +14,15 @@
     width: 100vw;">
     <div class="container text-white">
         <h1 class="display-4 pt-5">Welcome to Opiniony!</h1>
-        <p class="lead">Opiniony is an app that allows you to create and publish a vote for others to give their opinions on.</p>
+        <p class="lead">Opiniony is an app that allows you to create and publish a poll for others to give their opinions on.</p>
         <hr class="mt-lg-5" style="border-top: 3px solid white; color: white; background-color: white;">
         <div class="row" style="padding-top: 5%";>
             <div class="col text-center">
-                <h3 class="h3">Create A Vote:</h3>
-                <a class="nav-link text-dark" asp-area="" asp-controller="Create" asp-action="Index"><button class="btn btn-light btn-lg bg-success btn-outline-primary" type="button">Create Vote</button></a>
+                <h3 class="h3">Create A Poll:</h3>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Create" asp-action="Index"><button class="btn btn-light btn-lg bg-success btn-outline-primary" type="button">Create A Poll</button></a>
             </div>
             <div class="col text-center">
-                <h3 class="h3">Submit A Vote:</h3>
+                <h3 class="h3">Cast A Vote:</h3>
                 <a class="nav-link text-dark" asp-area="" asp-controller="Access" asp-action="Index"><button class="btn btn-light btn-lg bg-success btn-outline-primary" type="button">Cast A Vote</button></a>
             </div>
         </div>
