--- a/source/VotingApp/VotingApp/Views/Shared/_LoginPartial.cshtml
+++ b/source/VotingApp/VotingApp/Views/Shared/_LoginPartial.cshtml
@@ -14,7 +14,7 @@
         </li>
     
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Create" asp-action="CreatedVotesReview">Vote Review</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Create" asp-action="CreatedVotesReview">Poll Review</a>
     </li>
 
     <li class="nav-item">
