--- a/source/VotingApp/VotingApp/Views/Access/SubmitConfirmation.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/SubmitConfirmation.cshtml
@@ -16,9 +16,9 @@
     
     <div class="text-center text-white pt-5">
         <h1 class="display-4 mb-5"><strong>Thank you for casting a vote!</strong></h1>
-        <h2>Vote Title:</h2>
+        <h2>Poll Title:</h2>
         <h3>@Model.createdVote.VoteTitle</h3>
-        <h2 class="mt-5">Vote Description:</h2>
+        <h2 class="mt-5">Poll Description:</h2>
         <h3>@Model.createdVote.VoteDiscription</h3>
 	    <h2 class="mt-5">Vote Options:</h2>
         <div class="row">
