--- a/source/VotingApp/VotingApp/Views/Admin/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Admin/Index.cshtml
@@ -8,9 +8,9 @@
     <h3 class="text-white">Welcome to the admin page. Only admin can see this page</h3>
 	<div class="row">
 		<div class="col justify-content-center text-center mt-5">
-			<h4 class="text-white">View Created Votes in System</h4>
+			<h4 class="text-white">View Created Polls in System</h4>
 			<form asp-area="" asp-controller="Admin" asp-action="ViewAll">
-				<button class="btn btn-primary" type="submit">View Votes</button>
+				<button class="btn btn-primary" type="submit">View Polls</button>
 			</form>
 		</div>
 	</div>
