--- a/source/VotingApp/VotingApp/Views/Create/VoteResults.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/VoteResults.cshtml
@@ -1,6 +1,6 @@
 ﻿@model VotingApp.ViewModel.VoteResultsVM;
 @{
-	ViewData["Title"] = "Vote Results Page";
+	ViewData["Title"] = "Poll Results Page";
 }
 
 <div class="jumbotron jumbotron-fluid full-width text-white" style="margin-bottom: 0px; 
@@ -14,27 +14,27 @@
 	                                                                right: 50%;
 	                                                                width: 100vw;"> 
 	<div class="text-center text-white">
-		<h1 class="display-4">Vote Results</h1>
+		<h1 class="display-4">Poll Results</h1>
 		<hr class="mb-4"/>
 
 	</div>
 	@if (Model != null)
 	{
 		<div class="text-center text-white mb-3">
-			<h5>Vote Title: @Model.VoteTitle</h5>
-			<h5>Vote Description: @Model.VoteDescription</h5>
+			<h5>Poll Title: @Model.VoteTitle</h5>
+			<h5>Poll Description: @Model.VoteDescription</h5>
 			@if (Model.AnonymousVote)
 			{
-				<h5>This vote is anonymous</h5>
+				<h5>This poll is anonymous</h5>
 			}
 			else
 			{
-				<h5>This vote is not anonymous</h5>
+				<h5>This poll is not anonymous</h5>
 			}
 			@if (Model.ChartVoteOptions.Count == 0)
 			{
 				<div class="text-center text-white mb-3">
-					<h5><mark>There are no submitted votes yet for this created vote</mark></h5>
+					<h5><mark>There are no submitted votes yet for this poll</mark></h5>
 				</div>
 			}
 		</div>
@@ -108,8 +108,8 @@
 										@foreach (var vote in Model.VotesForLoggedInUsers)
 										{
 											<tr class="text-white-50">
-												<td>@vote.Key</td>
 												<td>@vote.Value</td>
+												<td>@vote.Key</td>
 											</tr>
 										}
 									</table>
@@ -141,7 +141,7 @@
 	}
 	<div class="text-center mt-3 mb-2">
 		<form asp-action="CreatedVotesReview" method="get">
-			<td><button type="submit" style="width:140px !important" class="btn btn-light bg-success btn-outline-primary">Back to Vote Review</button></td>
+			<td><button type="submit" style="width:140px !important" class="btn btn-light bg-success btn-outline-primary">Back to Poll Review</button></td>
 		</form>
 	</div>
 </div>
@@ -175,7 +175,7 @@
 				data.addRows(voteData);
 
 				var options = {
-					title: 'Your Vote Results',
+					title: 'Your Poll Results',
 					titleTextStyle: {fontSize: 30, bold: true},
 					legendTextStyle: {bold: true},
 					pieSliceText: 'value',
