--- a/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
+++ b/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
@@ -36,7 +36,9 @@
                         <li>
 		                    <a class="nav-link text-dark" asp-area="" asp-controller="Help" asp-action="Index">Help</a>
 	                    </li>
-                        
+                        <li>
+		                    <a class="nav-link text-dark" asp-area="" asp-controller="Help" asp-action="About">About</a>
+	                    </li>
 
                         @if(User.IsInRole("admin"))
                         {
