changed button colors on About page, added user story and mockup

--- a/source/VotingApp/VotingApp/Views/Help/About.cshtml
+++ b/source/VotingApp/VotingApp/Views/Help/About.cshtml
@@ -23,8 +23,8 @@
 					any future date and time; and it allows the option of having the poll open at a future date and time, giving voters a chance to research and consider
 					their options before casting their vote.  The Opiniony Voting App also allows the user to make the poll private to specific users. Finally, our app features
 					text-to-speech functionality, allowing users to have the poll title, description and options read aloud.</p>
-				<a href="https://github.com/vincenowell4/KSV-Software" target="_blank" style="text-decoration:none; color:darkblue;" 
-				   class="mt-3 btn-sm bg-light">Opiniony GitHub repo</a>
+				<a href="https://github.com/vincenowell4/KSV-Software" target="_blank" style="text-decoration:none; color:darkblue; background-color:#5ab8eb" 
+				   class="mt-3 btn-sm">Opiniony GitHub repo</a>
 			</div>
 		</div>
 		<div class="row">
@@ -38,16 +38,16 @@
 			<div class="col mt-0 mb-5 text-white">
 				<h5>The Team</h5>
 				Kaitlin Haley &nbsp;- 
-				<a href="https://github.com/kaitlin32?tab=repositories" target="_blank" style="text-decoration:none; color:darkblue;" class="mx-2 btn-sm bg-light">on GitHub</a> 
-				<a href = "https://www.linkedin.com/in/kaitlin-haley-86565821a/" target="_blank" style="text-decoration:none; color:darkblue;" class="mx-2 btn-sm bg-light">at LinkedIn</a>
+				<a href="https://github.com/kaitlin32?tab=repositories" target="_blank" style="text-decoration:none; color:darkblue; background-color:#5ab8eb" class="mx-2 btn-sm">on GitHub</a> 
+				<a href = "https://www.linkedin.com/in/kaitlin-haley-86565821a/" target="_blank" style="text-decoration:none; color:darkblue; background-color:#5ab8eb" class="mx-2 btn-sm">at LinkedIn</a>
 				<br/><br/>
 				Sam Torris &nbsp;&nbsp;&nbsp; - 
-				<a href="https://github.com/SamTorris?tab=repositories" target="_blank" style="text-decoration:none; color:darkblue;" class="mx-2 btn-sm bg-light">on GitHub</a>
-				<a href = "https://www.linkedin.com/in/sam-torris-551a49129/" target="_blank" style="text-decoration:none; color:darkblue;" class="mx-2 btn-sm bg-light">at LinkedIn</a>
+				<a href="https://github.com/SamTorris?tab=repositories" target="_blank" style="text-decoration:none; color:darkblue; background-color:#5ab8eb" class="mx-2 btn-sm">on GitHub</a>
+				<a href = "https://www.linkedin.com/in/sam-torris-551a49129/" target="_blank" style="text-decoration:none; color:darkblue; background-color:#5ab8eb" class="mx-2 btn-sm">at LinkedIn</a>
 				<br/><br/>
 				Vince Nowell - 
-				<a href="https://github.com/vincenowell4?tab=repositories" target="_blank" style="text-decoration:none; color:darkblue;" class="mx-2 btn-sm bg-light">on GitHub</a>
-				<a href = "https://www.linkedin.com/in/vince-nowell" target="_blank" style="text-decoration:none; color:darkblue;" class="mx-2 btn-sm bg-light">at LinkedIn</a>
+				<a href="https://github.com/vincenowell4?tab=repositories" target="_blank" style="text-decoration:none; color:darkblue; background-color:#5ab8eb" class="mx-2 btn-sm">on GitHub</a>
+				<a href = "https://www.linkedin.com/in/vince-nowell" target="_blank" style="text-decoration:none; color:darkblue; background-color:#5ab8eb" class="mx-2 btn-sm">at LinkedIn</a>
 			</div>
 		</div>
 
